# task_for_weather_analysis

./: README.md  data_analiz.py  data_collection.py  pyproject.toml  weather_data.csv
